# rn-harmony-demo

./: .gitignore  .prettierrc.js  App.tsx  Harmony_README.md  app.json  babel.config.js  env.dev.json  env.json  env.prod.json  metro.config.js  package.json  react-native.config.js  todo.md  tsconfig.json
.claude/skills/: installed.json
.claude/skills/git-commit/: SKILL.md  skill.json
.claude/skills/rnoh-link-package/: SKILL.md  skill.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/harmonyrnbase/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
harmony/: build-profile.json5  oh-package-lock.json5  oh-package.json5
harmony/AppScope/: app.json5
harmony/entry/: build-profile.json5  hvigorfile.ts  oh-package-lock.json5  oh-package.json5
harmony/entry/src/main/: module.json5
harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp  RNOHPackagesFactory.h  autolinking.cmake
harmony/entry/src/main/ets/: RNOHPackagesFactory.ets  RNPackagesFactory.ets
harmony/entry/src/main/ets/entryability/: EntryAbility.ets
harmony/entry/src/main/ets/pages/: Index.ets
harmony/hvigor/: hvigor-config.json5
ios/: .xcode.env  Podfile
ios/HarmonyRNBase/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/HarmonyRNBase.xcodeproj/: project.pbxproj
ios/HarmonyRNBase.xcodeproj/xcshareddata/xcschemes/: HarmonyRNBase.xcscheme
ios/HarmonyRNBase.xcworkspace/: contents.xcworkspacedata
patches/: @react-native-ohos+async-storage+2.2.1.patch  @react-native-ohos+react-native-screens+4.8.2-rc.1.patch
src/constants/: index.ts
src/navigation/: TabNavigator.tsx  types.ts
src/screens/findGoods/: FindGoodsScreen.tsx  FindGoodsStack.tsx
src/screens/home/: HomeScreen.tsx  HomeStack.tsx  TestDetailScreen.tsx
src/screens/mall/: MallScreen.tsx  MallStack.tsx
src/screens/mine/: MineScreen.tsx  MineStack.tsx
src/screens/waybill/: WaybillScreen.tsx  WaybillStack.tsx
src/store/: index.ts
src/store/slices/: globalSlice.ts  userSlice.ts
src/utils/: ConfigUtils.ts  LocalStorage.ts  designUtils.ts
